# jira-toolkit

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  README_APP.md  build.py  pylintrc  pyproject.toml  requirements.in  requirements.txt
docs/: ARCHITECTURE.md  CLOUD.md  CONFIG.md  CONTRIBUTING.md  DEV.md  FEATURES.md
resources/Samples/: config_sample.json  full_dataset_sample.xlsx
resources/templates/: ImportTemplate.xlsx  ImportTemplate_jira_ready.csv  config_importer.json  config_importer_full.json  jira-config.json
rsc/: build-config-dev.json  build-config-shipping.json  build-counter.json  generate_version.py  requirements.txt
rsc/templates/: ImportTemplate.xlsx  config_importer.json  jira-importer-config.json
scripts/: cleanup.py  demo_console.py  generate_version.py  git-config.bat  git-config.sh  install_requirements.py  pyinstaller_hooks.py
scripts/build_utils/: __init__.py  build_context.py  build_utils.py  logger_manager.py  safe_file_operations.py
scripts/demo/: demo_console.py
src/: jira_importer_main.py
src/jira_importer/: __init__.py  __main__.py  app.py  artifacts.py  config.py  config_factory.py  console.py  constants.py  csvprocessor.py  excel_config.py  excel_io.py  excel_table_reader.py  fileops.py  json_config.py  log.py  main.py  paths.py  userio.py  utils.py
src/jira_importer/config/: config_display.py  config_factory.py  config_models.py  constants.py  excel_config.py  issuetypes.py  json_config.py  minimal_config.py  utils.py
src/jira_importer/config/models/: __init__.py  issuetypes.py
src/jira_importer/errors/: __init__.py  base.py  codes.py  config.py  file.py  jira.py  messages.py  network.py  processing.py  responses.py  utils.py
src/jira_importer/excel/: __init__.py  excel_io.py  excel_table_reader.py
src/jira_importer/hooks/: __init__.py  hook-jira_importer.py  hook-requests.py
src/jira_importer/import_pipeline/: __init__.py  config_view.py  constants.py  models.py  processor.py  reporting.py  runner.py  utils.py  validator.py
src/jira_importer/import_pipeline/cloud/: __init__.py  auth.py  bulk.py  client.py  constants.py  credential_manager.py  mappers.py  metadata.py  preflight.py  secrets.py
src/jira_importer/import_pipeline/fixes/: __init__.py  assignee_resolver.py  builtin_fixes.py  registry.py  reporter_resolver.py  team_resolver.py
src/jira_importer/import_pipeline/rules/: __init__.py  builtin_rules.py  custom_field_rule.py  excel_rule_loader.py  registry.py
src/jira_importer/import_pipeline/sinks/: __init__.py  cloud_sink.py  csv_sink.py  sink_utils.py
src/jira_importer/import_pipeline/sources/: __init__.py  csv_source.py  xlsx_source.py
tests/data/configs/: config_invalid_bracket.json  config_invalid_comma.json  config_invalid_value.json  config_valid_default.json  config_valid_full.json  config_valid_minimal.json
tests/data/excels/: dataset_invalid_issue_ids.xlsx  default.xlsx
tests/misc/: test_macos_build.py
tests/unit/config/: test_config_models.py  test_excel_config.py
tests/unit/errors/: test_error_codes.py
tests/unit/import_pipeline/: test_processor_custom_fields.py  test_team_resolver_json_config.py
tests/unit/import_pipeline/cloud/: __init__.py  test_mappers.py  test_metadata.py  test_preflight.py  test_secrets.py
tests/unit/import_pipeline/rules/: test_builtin_rules.py
tests/unit/import_pipeline/sinks/: test_cloud_sink_custom_fields.py  test_csv_sink.py
